package com.jobsphere.core;


public interface LoginService {
    User login(String username, String password);
}
