```mermaid
classDiagram
    %% Groups for clearer visualization
    
    %% ================= UI Layer =================
    namespace UI {
        class MainFrame {
            +showCard(name)
        }
        class LoginPanel {
            +handleLogin()
            +handleRegister()
        }
        class ApplicantPanel {
            +refreshJobList()
            +applyToJob()
        }
        class CompanyPanel {
            +postJob()
            +rejectApplication()
        }
    }

    %% ================= Core Logic =================
    namespace Core {
        class DataManager {
            <<Singleton>>
            +getInstance()     
            +login()
            +registerUser()
        }
        
        class User { <<Abstract>> }
        class Applicant
        class Company
        
        class Job
        class JobApplication {
            +next()
            +reject()
        }
    }

    %% ================= Patterns =================
    
    %% Proxy Pattern (Authentication)
    namespace Auth_Proxy {
        class LoginService { <<Interface>> }
        class LoginProxy {
            +login()
            +logAttempt()
        }
        class RealLoginService {
            +login()
        }
    }

    %% State Pattern (Application Status)
    namespace Application_State {
        class ApplicationState { <<Interface>> }
        class AppliedState
        class ReviewedState
        class AcceptedState
        class RejectedState
    }

    %% Factories & Builders
    namespace Creator {
        class UserFactory {
            +createUser()
        }
        class JobBuilder {
            +build()
        }
    }

    %% Strategy Pattern (Search)
    namespace Search_Strategy {
        class SearchStrategy { <<Interface>> }
        class KeywordSearchStrategy
    }

    %% Repositories (Data Access)
    namespace Data_Access {
        class UserRepository { <<Interface>> }
        class JobRepository { <<Interface>> }
        class ApplicationRepository { <<Interface>> }
        class InMemoryUserRepository
        class InMemoryJobRepository
        class InMemoryApplicationRepository
    }

    %% ================= Relationships =================

    %% UI Relationships
    MainFrame *-- LoginPanel
    MainFrame *-- ApplicantPanel
    MainFrame *-- CompanyPanel
    LoginPanel ..> DataManager : uses
    ApplicantPanel ..> DataManager : uses
    CompanyPanel ..> DataManager : uses
    LoginPanel ..> UserFactory : uses

    %% Core Inheritance & Associations
    User <|-- Applicant
    User <|-- Company
    JobApplication --> Job
    JobApplication --> User : applicant
    JobApplication --> ApplicationState : has state

    %% Proxy Wiring
    LoginService <|.. RealLoginService
    LoginService <|.. LoginProxy
    LoginProxy o-- RealLoginService : delegates
    DataManager o-- LoginService : uses

    %% State Wiring
    ApplicationState <|.. AppliedState
    ApplicationState <|.. ReviewedState
    ApplicationState <|.. AcceptedState
    ApplicationState <|.. RejectedState

    %% Repository Wiring
    UserRepository <|.. InMemoryUserRepository
    JobRepository <|.. InMemoryJobRepository
    ApplicationRepository <|.. InMemoryApplicationRepository
    DataManager o-- UserRepository
    DataManager o-- JobRepository
    DataManager o-- ApplicationRepository

    %% Strategy Wiring
    SearchStrategy <|.. KeywordSearchStrategy
    ApplicantPanel ..> SearchStrategy : uses

    %% Builder Usage
    CompanyPanel ..> JobBuilder : uses
```
